<resources>
    <string name="app_name">Sweet Track</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>

  
    <string name="edit_informasi_pengguna">Edit Informasi Pengguna</string>
    <string name="pengingat_makan">Pengingat Makan</string>
    <string name="pengingat_cek_kesehatan">Pengingat Cek Kesehatan</string>


    <!-- Detail -->
    <string name="detail_makanan">Detail Makanan</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="jumlahKalori">240 Calories</string>
    <string name="jumlahProtein">15gr Protein</string>
    <string name="jumlahGula">10gr Gula</string>
    <string name="bahan">Bahan</string>
    <string name="detailBahan">1. 350 g kentang\n
        2. 350 g tahu putih\n
        3. 350 g tempe\n
        4. 7 lembar daun selada hijau\n
        5. 2 buah mentimun\n
        6. 100 g tauge\n
        7. 200 g kol\n
        8. minyak goreng</string>

    <string name="favorite">Favorite</string>
    <string name="favorite_subtitle">Temukan menu favoritmu di sini!</string>
    <string name="food_image">Gambar Makanan</string>
    <string name="detail">Detail</string>


    <string name="back">back</string>
    <string name="fotoprofile">fotoProfile</string>

    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="save_changes">Save Changes</string>

    <string name="age">Age</string>
    <string name="title_edit_profile">Edit Profile Fragment</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="nama_lengkap_pengguna">Nama Lengkap Pengguna</string>
    <string name="email_address">Email Address</string>
    <string name="email_example_com">email@example.com</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki_perempuan">Laki-Laki/Perempuan</string>
    <string name="tingkat_diabet">Tingkat Diabet</string>
    <string name="edit_profile_image">Edit Profile Image</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>


    <!-- Login Section -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="passwordHint">Masukkan password Anda</string>
    <string name="fill_all_fields">Please fill in all fields</string>
    <string name="login_successful">Login Successful!</string>
    <string name="login_failed">Login Failed! Please check your credentials.</string>


    <string name="sign_up">Sign-Up</string>
    <string name="sign_up_succesfull">Sign-Up Berhasil</string>
    <string name="sign_up_succesfull_message">Silahkan Lengkapi Data diri anda!</string>
    <string name="username">Username/Email</string>
    <string name="username_text">Username</string>
    <string name="usernameHint">Masukkan username Anda</string>
    <string name="email">Email</string>
    <string name="emailHint">Masukkan email atau username anda</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="ulangPassHint">Masukkan ulang password Anda</string>

    <string name="lupa_password">Lupa Password?</string>
    <string name="daftar">atau</string>
    <string name="invalid_format_email">Format email tidak valid</string>
    <string name="invalid_format_password">Password minimal 8 karakter</string>

    <!-- Welcome and Password Section -->
    <string name="welcome_text">Rencanakan Makan, Wujudkan Kesehatan</string>
    <string name="signup">SignUp</string>
    <string name="kirim">Kirim</string>
    <string name="kembali">Kembali</string>
    <string name="ulangi_password_baru">Ulangi Password baru</string>
    <string name="reset_password">Reset Password</string>
    <string name="input_pass">Silahkan masukkan password baru!</string>
    <string name="password_baru">Password baru</string>
    <string name="input_new_pass">Masukkan Password baru</string>
    <string name="instruksi_reset">Kami akan mengirimkan instruksi mengganti password. Silahkan masukkan :</string>
    <string name="authentication">Authentication</string>
    <string name="instruksi_otp">Kami akan mengirimkan kode ke alamat email.\nSilahkan masukkan kode OTP:</string>
    <string name="kode_otp">Kode OTP</string>
    <string name="otp_message">Belum mendapat OTP?</string>
    <string name="re_send">Kirim ulang</string>
    <string name="keterangan_2">Informasi umur, tinggi badan, berat badan dan jenis kelamin membantu sistem untuk menghitung rekomendasi kalori harian anda !!</string>
    <string name="keterangan_1">Masukkan umur, tinggi, berat badan dan jenis kelamin anda...</string>

    <!-- Authentication -->
    <string name="invalid_format_number">Kode OTP harus 6 karakter</string>
    <string name="invalid_format_username">Username minimal 8 karakter</string>


    <!-- Gender Types -->
    <string-array name="gender_types">
        <item>laki-laki</item>
        <item>perempuan</item>
    </string-array>

    <!-- Activity Levels -->
    <string-array name="activity_levels">
        <item>Pasif atau Tidak Aktif</item>
        <item>Ringan atau Sedikit Aktif</item>
        <item>Sedang</item>
        <item>Sangat Aktif</item>
        <item>Super Aktif atau Extrem</item>
    </string-array>

    <!-- Diabetes Types -->
    <string-array name="diabetes_types">
        <item>Diabetes Tipe 1</item>
        <item>Diabetes Tipe 2</item>
        <item>Diabetes Gestasional</item>
        <item>Normal</item>
    </string-array>

    <!-- Miscellaneous -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp_kadaluwarsa">OTP kadaluwarsa</string>
    <string name="simpan">Simpan</string>
    <string name="btn_edit">Edit Data</string>
    <string name="btn_add_data">Add Data</string>
    <string name="hello">Hello\n%1$s</string>
    <string name="hasil_kalori">%1$s kkal / hari</string>
    <string name="kalori_now">%1$s kkal</string>
    <string name="umur_user">%1$s tahun</string>

    <string name="input_text_hint">Masukkan pertanyaan anda</string>
    <string name="send_message_text">Kirim</string>
    <string name="image_nutrition">image nutrition</string>
    <string name="g">%1$s g</string>
    <string name="kalori">Kalori\t: %1$s</string>
    <string name="gula">Gula\t: %1$s</string>
    <string name="lemak">Lemak\t: %1$s</string>
    <string name="protein">Protein\t: %1$s</string>
</resources>
