<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.sweettrack.view.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <!-- Profile Fragment -->
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.sweettrack.view.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <!-- Sign Up Fragment -->
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.capstone.sweettrack.view.ui.signup.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up">
        <!-- Navigasi ke Login Fragment -->
        <action
            android:id="@+id/action_signUpFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <!-- Login Fragment -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.capstone.sweettrack.view.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
</navigation>
