<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Back Icon -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="Back"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Settings Icon -->
    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/baseline_settings_24"
        android:contentDescription="@string/settings"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Title -->

    <!-- Profile Image -->
    <TextView
        android:id="@+id/tvProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/ivSettings"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/baseline_person_24"
        android:background="@drawable/circle"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvProfileTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- Camera Icon -->
    <ImageView
        android:id="@+id/ivCamera"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_camera_alt_24"
        android:contentDescription="@string/edit_profile_image"
        app:layout_constraintBottom_toBottomOf="@id/ivProfileImage"
        app:layout_constraintEnd_toEndOf="@id/ivProfileImage"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"/>

    <!-- Username -->
    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ivProfileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Diabetes Level -->
    <TextView
        android:id="@+id/tvDiabetesLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tingkat_diabet"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvDiabetesLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDiabetesLevel" />

    <TextView
        android:id="@+id/tvFullNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_lengkap"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnEditProfile"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tvFullNameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nama_lengkap_pengguna"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tvFullNameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvFullNameLabel"/>

    <!-- Email -->
    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvFullNameValue"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tvEmailValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email_example_com"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tvEmailLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"/>

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_kelamin"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailValue"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tvGenderValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/laki_laki_perempuan"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tvGender"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvGender"/>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
