<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context="com.capstone.sweettrack.view.ui.editprofile.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Back Button -->

        <!-- Title -->

        <!-- Profile Image -->
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:background="@drawable/circle"
            android:contentDescription="@string/fotoprofile"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_person_24" />

        <!-- Full Name Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/nama_lengkap"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Username Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/username"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/email"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Date of Birth Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/tanggal_lahir"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:drawableEnd="@drawable/baseline_calendar_month_24" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Save Changes Button -->
        <Button
            android:id="@+id/btnSaveChanges"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:minWidth="200dp"
            android:text="@string/save_changes"
            android:paddingHorizontal="24dp"
            android:backgroundTint="@color/greenButton"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>
