<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/white"
    tools:context="com.capstone.sweettrack.view.ui.favorite.FavoriteFragment">

<!-- Header -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/light_green"
    android:padding="16dp">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_subtitle"
        android:textSize="16sp"
        android:textColor="@color/black" />
</LinearLayout>

<!-- RecyclerView for Favorite List -->
<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerViewFavorite"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:padding="16dp"
    android:clipToPadding="false"
    android:scrollbars="vertical" />
</LinearLayout>
